<resources>
    <string name="app_name">ContactApp</string>
    <string name="contacts">Contacts</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="number_hint">number...</string>
    <string name="name_hint">name...</string>
    <string name="add">Add</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="save">Save</string>
    <string name="do_you_want_to_delete">Do you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>