<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <Toolbar
        android:id="@+id/toolbar_add_contact"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        android:title=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_new_contact"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_21sp"
            android:textStyle="bold" />
    </Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_margin_20dp"
        android:layout_marginBottom="@dimen/dimen_margin_20dp"
        android:background="@drawable/et_drawable"
        android:paddingVertical="@dimen/dimen_padding_8dp"
        android:textColorHint="@color/text_hint_color"
        app:hintTextColor="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@id/et_input2_edit_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.widget.EditText
            android:id="@+id/et_name_edit_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:fontFamily="@font/scada"
            android:hint="@string/name_hint"
            android:maxLines="1"
            android:padding="@dimen/dimen_padding_8dp"
            android:paddingStart="@dimen/dimen_margin_20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_input2_edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_margin_20dp"
        android:background="@drawable/et_drawable"
        android:paddingVertical="@dimen/dimen_padding_8dp"
        android:textColorHint="@color/text_hint_color"
        app:hintTextColor="@color/text_hint_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.EditText
            android:id="@+id/et_number_edit_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:fontFamily="@font/scada"
            android:hint="@string/number_hint"
            android:maxLines="1"
            android:padding="@dimen/dimen_padding_8dp"
            android:paddingStart="@dimen/dimen_margin_20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/btn_plus_save_contact"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_margin_40dp"
        android:layout_marginEnd="@dimen/dimen_margin_20dp"
        android:background="@drawable/btn_drawable"
        android:drawableStart="@drawable/plus"
        android:fontFamily="@font/scada"
        android:paddingStart="@dimen/dimen_margin_20dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/add_contact_color"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input2_edit_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>