<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/dimen_margin_horizontal_20dp"
        android:backgroundTint="@color/toolbar_color"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_delete"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_24sp"
            android:fontFamily="@font/scada"
            android:layout_marginHorizontal="@dimen/dimen_margin_horizontal_20dp"
            android:layout_marginTop="@dimen/dimen_margin_top_40dp"
            android:gravity="center"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Aaron Ramsey?"
            android:layout_marginTop="@dimen/dimen_margin_top_20dp"
            android:layout_marginHorizontal="@dimen/dimen_margin_horizontal_20dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="@font/scada"
            android:textSize="@dimen/dimen_24sp"
            android:gravity="center"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/red"
            android:layout_marginTop="@dimen/dimen_margin_top_40dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/dimen_margin_vertical_20dp"
            android:gravity="center"
            >
        <TextView
            android:id="@+id/yes_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginEnd="@dimen/dimen_margin_end_40dp"
            android:textSize="@dimen/dimen_24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/red"
            />
        <TextView
            android:id="@+id/no_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="@dimen/dimen_24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/red"
            />
        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>